Fix whitespace bug in GodkjentPlanDelKnapper desktop

--- a/styles/_godkjentPlanKnapper.less
+++ b/styles/_godkjentPlanKnapper.less
@@ -47,6 +47,9 @@
         display: inline-block;
         position: relative;
         height: 3em;
+        @media (min-width: @screen-sm-min) {
+            height: 2em;
+        }
     }
 
     .godkjentPlanKnapper__knapp--aktiv:after {
